add more route and types to check error
