# public/swagger.json
@@ -82,6 +82,23 @@
 				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_ProspectPayload_",
 				"description": "Model Prospect"
 			},
+			"APIResponse_Prospect-Array_": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/Prospect"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"data"
+				],
+				"type": "object"
+			},
+			"ProspectArrayResponse": {
+				"$ref": "#/components/schemas/APIResponse_Prospect-Array_"
+			},
 			"APIResponse_Prospect-or-null_": {
 				"properties": {
 					"data": {
@@ -160,36 +177,24 @@
 		"contact": {}
 	},
 	"paths": {
-		"/prospects/{id}": {
+		"/prospects": {
 			"get": {
-				"operationId": "FindProspectById",
+				"operationId": "FindManyProspect",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ProspectResponse"
+									"$ref": "#/components/schemas/ProspectArrayResponse"
 								}
 							}
 						}
 					}
 				},
 				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			}
-		},
-		"/prospects": {
+				"parameters": []
+			},
 			"post": {
 				"operationId": "CreateProspectById",
 				"responses": {
@@ -224,6 +229,35 @@
 						}
 					}
 				}
+			}
+		},
+		"/prospects/{id}": {
+			"get": {
+				"operationId": "FindProspectById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ProspectResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		}
 	},
