# src/controllers/ProspectController.ts
@@ -1,9 +1,18 @@
 import { Body, Controller, Get, Path, Post, Route } from 'tsoa'
 import prisma, { type Prospect } from '../libs/db.js'
-import type { ProspectResponse } from '../models/prospect.js'
+import type {
+  ProspectArrayResponse,
+  ProspectResponse,
+} from '../models/prospect.js'
 
 @Route('prospects')
 export class ProspectsController extends Controller {
+  @Get()
+  public async findManyProspect(): ProspectArrayResponse {
+    const data = await prisma.prospect.findMany()
+    return { data }
+  }
+
   @Get('{id}')
   public async findProspectById(@Path() id: number): ProspectResponse {
     const data = await prisma.prospect.findUnique({ where: { id } })
